--- a/crawler/src/main/resources/templates/form.html
+++ b/crawler/src/main/resources/templates/form.html
@@ -131,6 +131,12 @@
             <label class="form-check-label" for="hasGarage">Има ли гараж</label>
         </div>
 
+        <!-- Паркомясто -->
+        <div class="form-check mb-3">
+            <input class="form-check-input" type="checkbox" id="hasParkingSpot" name="hasParkingSpot" th:field="*{hasParkingSpot}">
+            <label class="form-check-label" for="hasParkingSpot">Има ли паркомясто</label>
+        </div>
+
         <!-- Цена -->
         <div class="row mb-3">
             <div class="col-md-6">
